restart scanning, alert vibrate

--- a/loginAndRegister/Base.lproj/Main.storyboard
+++ b/loginAndRegister/Base.lproj/Main.storyboard
@@ -378,7 +378,7 @@
                                         <rect key="frame" x="0.0" y="28" width="320" height="59"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="VvS-cz-dM1" id="9R5-Nq-O8x">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="58"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="59"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" tag="11" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Barcode" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iuy-tn-Odj">
@@ -477,7 +477,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="for-1T-pn5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2161" y="87"/>
+            <point key="canvasLocation" x="-2730" y="88"/>
         </scene>
         <!--Login-->
         <scene sceneID="STV-gV-IG4">
@@ -624,7 +624,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="37L-Y0-NE7">
-                                <rect key="frame" x="0.0" y="297" width="320" height="65"/>
+                                <rect key="frame" x="0.0" y="296" width="320" height="66"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5cc-lf-kct">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="28"/>
@@ -636,7 +636,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cT8-3e-5um">
-                                        <rect key="frame" x="0.0" y="38" width="320" height="27"/>
+                                        <rect key="frame" x="0.0" y="38" width="320" height="28"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="28" id="bqv-nX-QWw"/>
                                         </constraints>
@@ -679,10 +679,10 @@
                                 </subviews>
                             </stackView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sqH-PB-s6t">
-                                <rect key="frame" x="95" y="104" width="130" height="153"/>
+                                <rect key="frame" x="95" y="104" width="130" height="152"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="v5y-Gl-EfP">
-                                        <rect key="frame" x="0.0" y="0.0" width="130" height="153"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="130" height="152"/>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -1359,8 +1359,8 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="pmp-XN-87m"/>
-        <segue reference="df1-hp-IYa"/>
-        <segue reference="PUX-Zt-Bnm"/>
+        <segue reference="7V4-Pz-Lgj"/>
+        <segue reference="RSg-Tb-hi5"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.0" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
 </document>
