--- a/loginAndRegister/Base.lproj/Main.storyboard
+++ b/loginAndRegister/Base.lproj/Main.storyboard
@@ -97,7 +97,7 @@
                         <outlet property="password1Txt" destination="Vpp-h5-jYs" id="fkN-w7-qNO"/>
                         <outlet property="password2Txt" destination="TO5-yS-x2j" id="f0w-OS-MWS"/>
                         <outlet property="registerButton" destination="Jin-bm-hA9" id="4KQ-nz-3Zt"/>
-                        <outlet property="usernameTxt" destination="TO5-yS-x2j" id="0ye-vR-M6j"/>
+                        <outlet property="usernameTxt" destination="Paq-F0-KyI" id="paG-vh-cs2"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="v2g-EQ-foL" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -511,7 +511,7 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="4r9-PT-oZN">
                                 <rect key="frame" x="40" y="316" width="240" height="76"/>
                                 <subviews>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email address" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Sqn-oU-i51">
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Sqn-oU-i51">
                                         <rect key="frame" x="0.0" y="0.0" width="240" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="X3H-6l-VPV"/>
@@ -623,23 +623,32 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sqH-PB-s6t">
+                                <rect key="frame" x="95" y="104" width="130" height="152"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="v5y-Gl-EfP">
+                                        <rect key="frame" x="0.0" y="0.0" width="130" height="152"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="v5y-Gl-EfP" firstAttribute="leading" secondItem="sqH-PB-s6t" secondAttribute="leading" id="1Rv-Hy-22j"/>
+                                    <constraint firstAttribute="bottom" secondItem="v5y-Gl-EfP" secondAttribute="bottom" id="1it-ZT-WIE"/>
+                                    <constraint firstItem="v5y-Gl-EfP" firstAttribute="top" secondItem="sqH-PB-s6t" secondAttribute="top" id="V2p-Ow-LdQ"/>
+                                    <constraint firstAttribute="trailing" secondItem="v5y-Gl-EfP" secondAttribute="trailing" id="oxw-pF-vg3"/>
+                                </constraints>
+                            </view>
                             <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="37L-Y0-NE7">
-                                <rect key="frame" x="0.0" y="296" width="320" height="66"/>
+                                <rect key="frame" x="0.0" y="296" width="320" height="77"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5cc-lf-kct">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="28"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="27.5" id="4gA-BN-RBA"/>
-                                        </constraints>
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="33.5"/>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cT8-3e-5um">
-                                        <rect key="frame" x="0.0" y="38" width="320" height="28"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="28" id="bqv-nX-QWw"/>
-                                        </constraints>
+                                        <rect key="frame" x="0.0" y="43.5" width="320" height="33.5"/>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -652,9 +661,6 @@
                                     <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="feR-p3-p0X">
                                         <rect key="frame" x="0.0" y="0.0" width="240" height="30"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="30" id="EYH-R4-wpr"/>
-                                        </constraints>
                                         <color key="tintColor" red="0.42359620329999997" green="0.68856555220000004" blue="0.084704004230000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <state key="normal" title="Change password">
                                             <color key="titleColor" red="0.42359620329999997" green="0.68856555220000004" blue="0.084704004230000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -666,9 +672,6 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CJR-R2-CkI">
                                         <rect key="frame" x="0.0" y="40" width="240" height="30"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="30" id="CBE-Ys-XeY"/>
-                                        </constraints>
                                         <state key="normal" title="Logout">
                                             <color key="titleColor" red="0.37206677449999997" green="0.64330440759999996" blue="0.072359468080000003" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
@@ -678,35 +681,22 @@
                                     </button>
                                 </subviews>
                             </stackView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sqH-PB-s6t">
-                                <rect key="frame" x="95" y="104" width="130" height="152"/>
-                                <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="v5y-Gl-EfP">
-                                        <rect key="frame" x="0.0" y="0.0" width="130" height="152"/>
-                                    </imageView>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="v5y-Gl-EfP" secondAttribute="trailing" id="7SQ-Yp-e6a"/>
-                                    <constraint firstItem="v5y-Gl-EfP" firstAttribute="leading" secondItem="sqH-PB-s6t" secondAttribute="leading" id="D4f-3Z-fCk"/>
-                                    <constraint firstItem="v5y-Gl-EfP" firstAttribute="top" secondItem="sqH-PB-s6t" secondAttribute="top" id="EgZ-vy-dRK"/>
-                                    <constraint firstAttribute="bottom" secondItem="v5y-Gl-EfP" secondAttribute="bottom" id="J7H-l0-ds4"/>
-                                </constraints>
-                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="ziW-mG-anY" secondAttribute="trailing" constant="40" id="1lK-ci-XZo"/>
-                            <constraint firstItem="37L-Y0-NE7" firstAttribute="leading" secondItem="867-Ag-6vB" secondAttribute="leading" id="1x3-wD-LCg"/>
-                            <constraint firstItem="sqH-PB-s6t" firstAttribute="top" secondItem="QBk-hy-MSB" secondAttribute="bottom" constant="40" id="3mw-rq-dyq"/>
-                            <constraint firstItem="sqH-PB-s6t" firstAttribute="leading" secondItem="867-Ag-6vB" secondAttribute="leading" constant="95" id="QgZ-hr-Jsg"/>
-                            <constraint firstAttribute="trailing" secondItem="sqH-PB-s6t" secondAttribute="trailing" constant="95" id="WMq-TW-Um2"/>
-                            <constraint firstAttribute="trailing" secondItem="37L-Y0-NE7" secondAttribute="trailing" id="e3d-Zo-JSD"/>
-                            <constraint firstItem="ziW-mG-anY" firstAttribute="leading" secondItem="867-Ag-6vB" secondAttribute="leading" constant="40" id="ebQ-cg-paj"/>
-                            <constraint firstItem="ziW-mG-anY" firstAttribute="top" secondItem="37L-Y0-NE7" secondAttribute="bottom" constant="50" id="pGg-qV-pxE"/>
-                            <constraint firstItem="yQG-Fb-EPD" firstAttribute="top" secondItem="ziW-mG-anY" secondAttribute="bottom" constant="37" id="ygt-Iy-pf6"/>
-                            <constraint firstItem="37L-Y0-NE7" firstAttribute="top" secondItem="sqH-PB-s6t" secondAttribute="bottom" constant="40" id="zx0-MD-cR3"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="sqH-PB-s6t" secondAttribute="trailing" constant="79" id="12i-cf-xFT"/>
+                            <constraint firstItem="ziW-mG-anY" firstAttribute="leading" secondItem="867-Ag-6vB" secondAttribute="leadingMargin" constant="24" id="8NK-Zt-Y66"/>
+                            <constraint firstAttribute="bottom" secondItem="sqH-PB-s6t" secondAttribute="bottom" constant="312" id="EKV-aQ-MtF"/>
+                            <constraint firstItem="sqH-PB-s6t" firstAttribute="centerX" secondItem="867-Ag-6vB" secondAttribute="centerX" id="Icv-jR-USY"/>
+                            <constraint firstItem="sqH-PB-s6t" firstAttribute="top" secondItem="QBk-hy-MSB" secondAttribute="bottom" constant="40" id="Pnp-9K-hlq"/>
+                            <constraint firstItem="37L-Y0-NE7" firstAttribute="top" secondItem="sqH-PB-s6t" secondAttribute="bottom" constant="40" id="Q0x-6I-2eC"/>
+                            <constraint firstAttribute="bottom" secondItem="37L-Y0-NE7" secondAttribute="bottom" constant="195" id="SMF-bF-tXe"/>
+                            <constraint firstItem="sqH-PB-s6t" firstAttribute="leading" secondItem="867-Ag-6vB" secondAttribute="leadingMargin" constant="79" id="X3l-Nn-ElM"/>
+                            <constraint firstItem="ziW-mG-anY" firstAttribute="top" secondItem="37L-Y0-NE7" secondAttribute="bottom" constant="39" id="XLE-Jd-DRA"/>
+                            <constraint firstAttribute="trailing" secondItem="37L-Y0-NE7" secondAttribute="trailing" id="XVa-Hr-IgF"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="ziW-mG-anY" secondAttribute="trailing" constant="24" id="Xcy-sI-rrw"/>
+                            <constraint firstItem="37L-Y0-NE7" firstAttribute="leading" secondItem="867-Ag-6vB" secondAttribute="leading" id="ZkB-Mf-HHh"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Profile" id="MOc-Kc-BFW"/>
@@ -957,11 +947,11 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bRe-0Z-JDR">
                                 <rect key="frame" x="0.0" y="64" width="320" height="422"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.82423878205128198" green="0.82423878205128198" blue="0.82423878205128198" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="9cH-8S-1xc">
                                 <rect key="frame" x="0.0" y="485" width="320" height="39"/>
-                                <color key="backgroundColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.90935497984871794" green="0.90935497984871794" blue="0.90935497984871794" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="39" id="Bid-59-x6C"/>
                                 </constraints>
@@ -1026,7 +1016,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="eH6-j6-4E1">
-                                <rect key="frame" x="16" y="179" width="288" height="120"/>
+                                <rect key="frame" x="16" y="174" width="288" height="120"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="bGp-Vg-xwF">
                                         <rect key="frame" x="0.0" y="0.0" width="288" height="70"/>
@@ -1076,11 +1066,11 @@
                                 </subviews>
                             </stackView>
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3D6-b2-3NZ">
-                                <rect key="frame" x="16" y="298" width="288" height="216"/>
+                                <rect key="frame" x="16" y="293" width="288" height="216"/>
                             </pickerView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UdI-91-e1s">
-                                <rect key="frame" x="0.0" y="64" width="320" height="97"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <rect key="frame" x="0.0" y="64" width="320" height="92"/>
+                                <color key="backgroundColor" red="0.8771233974358974" green="0.8771233974358974" blue="0.8771233974358974" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -1359,8 +1349,8 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="pmp-XN-87m"/>
-        <segue reference="7V4-Pz-Lgj"/>
-        <segue reference="RSg-Tb-hi5"/>
+        <segue reference="PUX-Zt-Bnm"/>
+        <segue reference="df1-hp-IYa"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.0" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
 </document>
