title product details

--- a/loginAndRegister/Base.lproj/Main.storyboard
+++ b/loginAndRegister/Base.lproj/Main.storyboard
@@ -1284,9 +1284,9 @@
         <image name="uncheck" width="300" height="300"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="WCh-aG-gje"/>
+        <segue reference="7V4-Pz-Lgj"/>
         <segue reference="pmp-XN-87m"/>
-        <segue reference="pSe-mN-b6h"/>
+        <segue reference="RSg-Tb-hi5"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.0" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
 </document>
