button style class

--- a/loginAndRegister/Base.lproj/Main.storyboard
+++ b/loginAndRegister/Base.lproj/Main.storyboard
@@ -738,7 +738,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="bottom" reuseIdentifier="CategoryCell" id="kVK-ZS-qCy" customClass="CategoryCell" customModule="loginAndRegister" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="bottom" reuseIdentifier="categoryCell" id="kVK-ZS-qCy" customClass="CategoryCell" customModule="loginAndRegister" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -1284,7 +1284,7 @@
         <image name="uncheck" width="300" height="300"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="7V4-Pz-Lgj"/>
+        <segue reference="df1-hp-IYa"/>
         <segue reference="pmp-XN-87m"/>
         <segue reference="RSg-Tb-hi5"/>
     </inferredMetricsTieBreakers>
